Fixed button spacing

--- a/LaserGateGrid/public_html/laserGate.css
+++ b/LaserGateGrid/public_html/laserGate.css
@@ -228,6 +228,7 @@ div#buttonRow {
 button#menuClick, button#resume, button#nextLevel, button#restart {
     width: 25%;
     margin: .5%;
+    height: 50px;
     z-index: 1700;
     text-align: center;
     vertical-align: middle;
@@ -236,7 +237,8 @@ button#menuClick, button#resume, button#nextLevel, button#restart {
     font-family: Arial, Helvetica, sans-serif;
 	font-size: 1em;
 	color: #ffffff;
-	padding: 10px 20px;    
+	
+    padding: 5px;    
     background: linear-gradient(to bottom, #42aaff 0%, #003366 100%);
     border-radius: 10px;
     border: 1px solid #003366;
@@ -246,6 +248,7 @@ button#menuClick, button#resume, button#nextLevel, button#restart {
     text-shadow:
             0px -1px 0px rgba(000,000,000,0.7),
             0px 1px 0px rgba(255,255,255,0.3);
+    text-align: center;
 }
 
 #menuClick h1,#nextLevel h1,#resume h1, #restart h1, #clearStorage h1{ 
